# MyChat

./: README.md  server.cpp
client/: MyChat.pro  MyChat.pro.user.2.7pre1  MyChat.pro.user.5d8745d  MyChat.pro.user.X13608  add_target_id.cpp  add_target_id.h  add_target_id.ui  common.cpp  common.h  dialog.cpp  dialog.h  dialog.ui  login.cpp  login.cpp.kI4768  login.h  login.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  register_part.cpp  register_part.h
server/: CMakeLists.txt  api_db.cpp  api_db.h  api_json.cpp  api_json.h  main.cpp  server.cpp
